--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,3 +31,29 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  update-aur:
+    needs: goreleaser
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    
+    steps:
+      - name: Update AUR package
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.AUR_SSH_PRIVATE_KEY }}" > ~/.ssh/aur
+          chmod 600 ~/.ssh/aur
+          ssh-keyscan -H aur.archlinux.org >> ~/.ssh/known_hosts
+          
+          git clone ssh://aur@aur.archlinux.org/awsm-bin.git awsm-bin
+          cd awsm-bin
+          
+          VERSION=${GITHUB_REF#refs/tags/v}
+          sed -i "s/pkgver=.*/pkgver=${VERSION}/" PKGBUILD
+          updpkgsums
+          
+          git config user.name "${{ secrets.AUR_USERNAME }}"
+          git config user.email "${{ secrets.AUR_EMAIL }}"
+          git add .
+          git commit -m "Update to version ${VERSION}"
+          GIT_SSH_COMMAND="ssh -i ~/.ssh/aur" git push origin master
