--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,13 +35,11 @@ jobs:
   update-aur:
     needs: goreleaser
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-    
     steps:
-      - name: Update AUR package
-        uses: ATGardner/aur-update-action@v1
+      - uses: actions/checkout@v4
+      - uses: varrcan/aur-publish-action@v1
         with:
-          package_name: awsm-bin
-          commit_username: ${{ secrets.AUR_USERNAME }}
-          commit_email: ${{ secrets.AUR_EMAIL }}
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+          package_name: awsm-bin
+          git_username: ${{ secrets.AUR_USERNAME }}
+          git_email: ${{ secrets.AUR_EMAIL }}
