--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,6 +48,15 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H aur.archlinux.org >> ~/.ssh/known_hosts
           
+          # Configure SSH for AUR
+          cat > ~/.ssh/config << EOF
+          Host aur.archlinux.org
+            IdentityFile ~/.ssh/id_rsa
+            User aur
+            StrictHostKeyChecking no
+          EOF
+          chmod 600 ~/.ssh/config
+          
           git config --global user.name "${{ secrets.AUR_USERNAME }}"
           git config --global user.email "${{ secrets.AUR_EMAIL }}"
           
