added automatic workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,3 +44,69 @@ jobs:
           package_name: awsm-bin
           git_username: ${{ secrets.AUR_USERNAME }}
           git_email: ${{ secrets.AUR_EMAIL }}
+          
+  update-homebrew:
+    needs: goreleaser
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Get version
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Checkout tap repository
+        uses: actions/checkout@v4
+        with:
+          repository: AleG03/awsm-tap
+          token: ${{ secrets.TAP_TOKEN }}
+          path: awsm-tap
+
+      - name: Calculate SHA256 for ARM64
+        id: sha_arm64
+        run: |
+          curl -sL "https://github.com/AleG03/awsm/releases/download/${{ steps.get_version.outputs.VERSION }}/awsm_${{ steps.get_version.outputs.VERSION#v }}_darwin_arm64.tar.gz" | sha256sum | cut -d' ' -f1 > sha_arm64.txt
+          echo "SHA=$(cat sha_arm64.txt)" >> $GITHUB_OUTPUT
+
+      - name: Calculate SHA256 for AMD64
+        id: sha_amd64
+        run: |
+          curl -sL "https://github.com/AleG03/awsm/releases/download/${{ steps.get_version.outputs.VERSION }}/awsm_${{ steps.get_version.outputs.VERSION#v }}_darwin_amd64.tar.gz" | sha256sum | cut -d' ' -f1 > sha_amd64.txt
+          echo "SHA=$(cat sha_amd64.txt)" >> $GITHUB_OUTPUT
+
+      - name: Update formula
+        run: |
+          cd awsm-tap
+          cat > Formula/awsm.rb << EOL
+          class Awsm < Formula
+            desc "CLI tool to simplify working with AWS profiles, credentials, and sessions"
+            homepage "https://github.com/AleG03/awsm"
+            version "${{ steps.get_version.outputs.VERSION#v }}"
+            license "Apache-2.0"
+
+            if Hardware::CPU.arm?
+              url "https://github.com/AleG03/awsm/releases/download/${{ steps.get_version.outputs.VERSION }}/awsm_${{ steps.get_version.outputs.VERSION#v }}_darwin_arm64.tar.gz"
+              sha256 "${{ steps.sha_arm64.outputs.SHA }}"
+            else
+              url "https://github.com/AleG03/awsm/releases/download/${{ steps.get_version.outputs.VERSION }}/awsm_${{ steps.get_version.outputs.VERSION#v }}_darwin_amd64.tar.gz"
+              sha256 "${{ steps.sha_amd64.outputs.SHA }}"
+            end
+
+            def install
+              bin.install "awsm"
+              generate_completions_from_executable(bin/"awsm", "completion")
+            end
+
+            test do
+              assert_match version.to_s, shell_output("\#{bin}/awsm --version")
+            end
+          end
+          EOL
+
+      - name: Commit and push changes
+        run: |
+          cd awsm-tap
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          git add Formula/awsm.rb
+          git commit -m "Update awsm to ${{ steps.get_version.outputs.VERSION }}"
+          git push
