--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,7 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
 
   update-aur:
     needs: goreleaser
@@ -44,73 +45,3 @@ jobs:
           package_name: awsm-bin
           git_username: ${{ secrets.AUR_USERNAME }}
           git_email: ${{ secrets.AUR_EMAIL }}
-          
-  update-homebrew:
-    needs: goreleaser
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - name: Extract version
-        id: extract_version
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
-          echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-
-      - name: Checkout tap repository
-        uses: actions/checkout@v4
-        with:
-          repository: AleG03/awsm-tap
-          path: awsm-tap
-
-      - name: Calculate SHA256 for ARM64
-        id: sha_arm64
-        run: |
-          curl -sL "https://github.com/AleG03/awsm/releases/download/${{ steps.extract_version.outputs.TAG }}/awsm_${{ steps.extract_version.outputs.VERSION }}_darwin_arm64.tar.gz" | sha256sum | cut -d' ' -f1 > sha_arm64.txt
-          echo "SHA=$(cat sha_arm64.txt)" >> $GITHUB_OUTPUT
-
-      - name: Calculate SHA256 for AMD64
-        id: sha_amd64
-        run: |
-          curl -sL "https://github.com/AleG03/awsm/releases/download/${{ steps.extract_version.outputs.TAG }}/awsm_${{ steps.extract_version.outputs.VERSION }}_darwin_amd64.tar.gz" | sha256sum | cut -d' ' -f1 > sha_amd64.txt
-          echo "SHA=$(cat sha_amd64.txt)" >> $GITHUB_OUTPUT
-
-      - name: Update formula
-        run: |
-          cd awsm-tap
-          cat > Formula/awsm.rb << EOL
-          class Awsm < Formula
-            desc "CLI tool to simplify working with AWS profiles, credentials, and sessions"
-            homepage "https://github.com/AleG03/awsm"
-            version "${{ steps.extract_version.outputs.VERSION }}"
-            license "Apache-2.0"
-
-            if Hardware::CPU.arm?
-              url "https://github.com/AleG03/awsm/releases/download/${{ steps.extract_version.outputs.TAG }}/awsm_${{ steps.extract_version.outputs.VERSION }}_darwin_arm64.tar.gz"
-              sha256 "${{ steps.sha_arm64.outputs.SHA }}"
-            else
-              url "https://github.com/AleG03/awsm/releases/download/${{ steps.extract_version.outputs.TAG }}/awsm_${{ steps.extract_version.outputs.VERSION }}_darwin_amd64.tar.gz"
-              sha256 "${{ steps.sha_amd64.outputs.SHA }}"
-            end
-
-            def install
-              bin.install "awsm"
-              generate_completions_from_executable(bin/"awsm", "completion")
-            end
-
-            test do
-              assert_match version.to_s, shell_output("\#{bin}/awsm --version")
-            end
-          end
-          EOL
-
-      - name: Commit and push changes
-        run: |
-          cd awsm-tap
-          git config user.name "GitHub Action"
-          git config user.email "action@github.com"
-          git add Formula/awsm.rb
-          git commit -m "Update awsm to ${{ steps.extract_version.outputs.TAG }}" || echo "No changes to commit"
-          # Use PAT to push to the tap repo so the github-actions bot (which may not have write) can push
-          git remote set-url origin https://x-access-token:${{ secrets.TAP_TOKEN }}@github.com/AleG03/awsm-tap.git
-          git push origin HEAD:main
